@@ -13,6 +13,7 @@ Android Client
 - Added the ability to control user's transmissions
 - Ability to play sound when voice activation is toggled
 - Ability to use Text-To-Speech to announce transmission changes
+- Ability to use Text-To-Speech to announce subscription changes
 iOS Client
 -
 Server
